Xertica/force-app/main/default/objects/Ex_clientes__c/Ex_clientes__c.object-meta.xml
<CustomObject>
    <description>Objeto donde se almacena los Ex-clientes de Xcertica</description>
    <label>Ex clientes</label>
    <nameField>
        <displayFormat>{YY}-{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>