Xertica/force-app/main/default/objects/Ex_clientes__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo lookup que relaciona con el objeto contacto</description>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Exclientes</relationshipLabel>
    <relationshipName>Exclientes</relationshipName>
    <type>Lookup</type>
</CustomField>