Xertica/force-app/main/default/objects/Ex_clientes__c/fields/Generado_automoticamente__c.field-meta.xml
<CustomField>
    <fullName>Generado_automoticamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que describe si el cliente fue generado automaticamente</description>
    <label>Generado automáticamente</label>
    <type>Checkbox</type>
</CustomField>