Xertica/force-app/main/default/objects/Ex_clientes__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <formula>Contacto__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol</label>
    <type>Text</type>
</CustomField>